--- a/src/index.css
+++ b/src/index.css
@@ -3,22 +3,26 @@
 @tailwind utilities;
 
 * {
-  font-family: "Satoshi", sans-serif;
-  /* font-family: "General Sans", sans-serif; */
+  /* font-family: "Satoshi", sans-serif; */
+  font-family: "General Sans", sans-serif;
   /* font-family: "Bespoke Sans", sans-serif; */
   /* font-family: "RX100", sans-serif; */
 }
 /* WebKit-based browsers (Chrome, Edge, Safari) */
 html {
+  
   scrollbar-width: thin; /* This will make the scrollbar thinner */
 }
 
 body::-webkit-scrollbar {
+  background-color: #8a2be2;
   width: 12px; /* Width of the scrollbar */
   height: 12px; /* If horizontal scrollbar */
 }
 
 body::-webkit-scrollbar-track {
+  background-color: #8a2be2;
+
   background: #f0f0f0; /* Track color */
 }
 
